# news-letter

./: .editorconfig  Cargo.toml  config.yaml  init_db.sh
.github/workflows/: audit.yml  rust.yml
migrations/: 20260705132530_create_subscriptions_table.sql
scripts/: init_db.sh
src/: config.rs  main.rs  routes.rs  startup.rs
src/routes/: health_check.rs  subscripions.rs
tests/: health_check.rs
