[package]
name = "news-letter"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
chrono = "0.4.45"
config = "0.15.25"
env_logger = "0.11.11"
log = "0.4.33"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8.6", default-features = false, features = [
  "tls-rustls",
  "macros",
  "postgres",
  "chrono",
  "migrate",
  "runtime-tokio",
] }

[dev-dependencies]
reqwest = "0.13.4"
uuid = { version = "1.23", features = ["v4"] }
